src/objects/peer__Bank_Recon_Exception__c.object
<CustomObject>
    <fields>
        <fullName>peer__Account_Number__c</fullName>
        <label>Account Number</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>peer__Bank_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bank Account</label>
        <referenceTo>loan__Bank_Account__c</referenceTo>
        <relationshipName>Bank_Recon_Exceptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>peer__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>peer__Reason__c</fullName>
        <label>Reason Code</label>
        <picklist>
            <picklistValues>
                <fullName>CR-IFT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CR-LPT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CR-DST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DR-DST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DR-IFT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DR-IFT-DISHONOR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CR-DST-DISHONOR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CR-IFT-DISHONOR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DR-LPT-DISHONOR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CR-WR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DR-WR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EXCEPTION</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>peer__Recon_Message__c</fullName>
        <label>Reason Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>peer__Reference_Number2__c</fullName>
        <label>Reference Number2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>peer__Reference_Number3__c</fullName>
        <label>Reference Number3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>peer__Reference_Number__c</fullName>
        <label>Reference Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>peer__Statement_Date__c</fullName>
        <label>Statement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>peer__Target_Account_Number__c</fullName>
        <label>Target Account Number</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>peer__Transaction_Amount__c</fullName>
        <label>Transaction Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>peer__Transaction_Date__c</fullName>
        <label>Transaction Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>peer__Transaction_Handled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Transaction Handled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>peer__Transaction_Type__c</fullName>
        <label>Transaction Type</label>
        <picklist>
            <picklistValues>
                <fullName>DEBIT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CREDIT</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Bank Statement Exception</label>
    <nameField>
        <displayFormat>BRE-{0000000}</displayFormat>
        <label>Bank Recon Exception Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bank Statement Exceptions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>